refactor(place-order): introduce index map and null-safety with unmodifiable lists